lab1/Test/L1-A-9-95.output
Error Type B at Line 6
Error Type B at Line 30
Error Type B at Line 32
Error Type B at Line 36
