lab1/Test/L1-A-9-95.cmm
struct m_5oA98Yr gx3 ( ) {
  float n6XNgXyrBApwsWML_Dg ;
  if ( xasbo8BB5ENv )   while ( YtEr4kyBHqcsKc )   if 
    ( g0KyMsE3TxJsed1 )   return AJuX1Cj9dgV5yx_ ;
else {
    int Y , AoDrOYKtPREodg4PKSe [ 1371713956 ] = || 
      Emo457aswGVcWSGR == G_LsmdzRBR ( uP2I = tMUBHQAO43yY 
      = zlIWFV2pO9vm && xMiQQHkXI9o < yC - PY06oQAz6r * 
      Tl9Pf5WdFXu8z0OSL [ qXB7ilVi2Knpzivdl = MlBHP >= y 
      + ! ( M && R9N9qP6DAlmiqV != J9AdG9EsIIA [ ZCaxm2B 
      || OgtsiXNHAjM5Jo > ( Ey8l1j257uvbqrdXTI || o55oU1sqlMgIySrH 
      >= CV5_I2oydIkmiPM13kS [ TWRJoDUBLv7gDxQ41 = e && 
      kRgcN9Wkbk ( MMfcEhsOmex0qzt , dtv80aZIbFeCJsFsY5y 
      ) ] ) - c0V ] <= NSq5wRV3ERfJWzx2tq && ! 169254700.1337974528 
      ) ] / ! 2090934448 * - ! fOuavHEvmDD2 ( ) ) . nkK 
      ;
  }


}
int Xn1Dg 
;
int ;
int RUZKOiQY3eN5M 
;
struct {
}alpN7M7V4napb1JfqC6 , Btdz53XOtspcb2M 

;
;
int ;
int ( int xuDj0IZaKAIW3KU_ , int B5 ) {
}
struct L3zRA {
};
int IBOTHo ( {
  CzSXt_ks ;
  Vea1Wrag ;
}
int ;
int ;
int BBxwO1phZ ( ) {
  lUlhyp8XnSX92xHBnSv ;
  Cc ;
  djvOOIUx ;
{
    if ( xMptWgM5Ho3TBy )     L89iYmIYI0f ;
else     if ( VnOdJjp9VRA )     pXLh ;


    if ( F )     if ( T7hMwHL2nOnFb )     DPBkfQv5G10_cXCF_ 
      ;
else     wssyJeeGLfBR ;

else     upF2ky08G9KiV2yv9dk1 ;

    x4PVqN9vsgX5QBpZB ;
  }}
